Revision history for perl distribution DBIx-TempDB

0.04 Not Released
 - Add support for "template"

0.03 2015-09-17T21:59:16+0200
 - Add support for "drop_from_child"

0.02 2015-09-17T20:02:12+0200
 - Fix depending on DBI
 - Add create_database() sets DBIX_TEMP_DB_URL
 - Add support for calling dsn() as a class method
 - Add execute()
 - Add execute_file()

0.01 2015-09-17T19:12:10+0200
 - Can make temp database for postgresql
 - Can make temp database for mysql